Adding android plugin

--- a/plugin.xml
+++ b/plugin.xml
@@ -5,6 +5,21 @@
     version="1.0.2">
     <name>flomio_cordova_plugin</name>
     <description>Flomio SDK integration enables NFC, BLE, and UHF RFID reader hardware.</description>
+    
+    <!-- android -->
+    <platform name="android">
+        <config-file target="res/xml/config.xml" parent="/*">
+          <feature name="FlomioPlugin">
+            <param name="android-package" value="com.flomio.plugin.FlomioPlugin"/>
+          </feature>
+        </config-file>
+        <js-module src="www/FlomioPlugin.js" name="FlomioPlugin">
+            <clobbers target="floPlugin" />
+        </js-module>
+
+        <source-file src="src/android/FlomioPlugin.java" target-dir="src/com/flomio/plugin/"/>
+    </platform>
+
     <!-- ios -->
     <platform name="ios">    
         <config-file target="config.xml" parent="/*">
