Added file destinations

--- a/plugin.xml
+++ b/plugin.xml
@@ -28,70 +28,70 @@
             </feature>
         </config-file>
         <source-file src="src/ios/libSDKClasses.a" framework="true" />
-        <header-file src="ABDHex.h" target-dir="src/ios"/>
-        <header-file src="FeitianBtReader.h" target-dir="src/ios"/>
-        <header-file src="ABTAcr1255uj1Reader.h" target-dir="src/ios"/>
-        <header-file src="FeitianReader.h" target-dir="src/ios"/>
-        <header-file src="FloBLEReader.h" target-dir="src/ios"/>
-        <header-file src="ABTBluetoothReader.h" target-dir="src/ios"/>
-        <header-file src="ABTBluetoothReaderManager.h" target-dir="src/ios"/>
-        <header-file src="FloProtocolsCommon.h" target-dir="src/ios"/>
-        <header-file src="ABTError.h" target-dir="src/ios"/>
-        <header-file src="FmAudioJackDevice.h" target-dir="src/ios"/>
-        <header-file src="ACRAesTrackData.h" target-dir="src/ios"/>
-        <header-file src="FmAudioJackSessionManager.h" target-dir="src/ios"/>
-        <header-file src="FmBluetoothDevice.h" target-dir="src/ios"/>
-        <header-file src="ACRCRC16.h" target-dir="src/ios"/>
-        <header-file src="FmBluetoothSessionManager.h" target-dir="src/ios"/>
-        <header-file src="ACRDukptReceiver.h" target-dir="src/ios"/>
-        <header-file src="FmCustomTypes.h" target-dir="src/ios"/>
-        <header-file src="ACRDukptTrackData.h" target-dir="src/ios"/>
-        <header-file src="FmDevice.h" target-dir="src/ios"/>
-        <header-file src="FmErrorManager.h" target-dir="src/ios"/>
-        <header-file src="ACRResult.h" target-dir="src/ios"/>
-        <header-file src="ACRStatus.h" target-dir="src/ios"/>
-        <header-file src="FmNdefManager.h" target-dir="src/ios"/>
-        <header-file src="ACRTrack1Data.h" target-dir="src/ios"/>
-        <header-file src="FmSessionManager.h" target-dir="src/ios"/>
-        <header-file src="ACRTrack2Data.h" target-dir="src/ios"/>
-        <header-file src="FtBleReader.h" target-dir="src/ios"/>
-        <header-file src="ACRTrackData.h" target-dir="src/ios"/>
-        <header-file src="Logging.h" target-dir="src/ios"/>
-        <header-file src="ACSBluetooth.h" target-dir="src/ios"/>
-        <header-file src="NFCMessage.h" target-dir="src/ios"/>
-        <header-file src="AcsAjReader.h" target-dir="src/ios"/>
-        <header-file src="NSData+FJStringDisplay.h" target-dir="src/ios"/>
-        <header-file src="AcsBtReader.h" target-dir="src/ios"/>
-        <header-file src="NdefMessage.h" target-dir="src/ios"/>
-        <header-file src="AudioJack.h" target-dir="src/ios"/>
-        <header-file src="NdefRecord.h" target-dir="src/ios"/>
-        <header-file src="AudioJackErrors.h" target-dir="src/ios"/>
-        <header-file src="Reader.h" target-dir="src/ios"/>
-        <header-file src="BleTags.h" target-dir="src/ios"/>
-        <header-file src="ReaderInterface.h" target-dir="src/ios"/>
-        <header-file src="DUKPT.h" target-dir="src/ios"/>
-        <header-file src="ReaderManager.h" target-dir="src/ios"/>
-        <header-file src="FJStringDisplay.h" target-dir="src/ios"/>
-        <header-file src="Tag.h" target-dir="src/ios"/>
-        <header-file src="FLOReader.h" target-dir="src/ios"/>
-        <header-file src="Utilities.h" target-dir="src/ios"/>
-        <header-file src="FLOTag.h" target-dir="src/ios"/>
-        <header-file src="ft301u.h" target-dir="src/ios"/>
-        <header-file src="FTType.h" target-dir="src/ios"/>
-        <header-file src="utils.h" target-dir="src/ios"/>
-        <header-file src="Utilities.h" target-dir="src/ios"/>
-        <header-file src="FLOTag.h" target-dir="src/ios"/>
-        <header-file src="ft301u.h" target-dir="src/ios"/>
-        <header-file src="FTType.h" target-dir="src/ios"/>
-        <header-file src="FTaR530.h" target-dir="src/ios"/>
-        <header-file src="winscard.h" target-dir="src/ios"/>
-        <header-file src="FeitianAjReader.h" target-dir="src/ios"/>
-        <header-file src="wintypes.h" target-dir="src/ios"/>
+        <header-file src="src/ios/ABDHex.h" target-dir="src/ios"/>
+        <header-file src="src/ios/FeitianBtReader.h" target-dir="src/ios"/>
+        <header-file src="src/ios/ABTAcr1255uj1Reader.h" target-dir="src/ios"/>
+        <header-file src="src/ios/FeitianReader.h" target-dir="src/ios"/>
+        <header-file src="src/ios/FloBLEReader.h" target-dir="src/ios"/>
+        <header-file src="src/ios/ABTBluetoothReader.h" target-dir="src/ios"/>
+        <header-file src="src/ios/ABTBluetoothReaderManager.h" target-dir="src/ios"/>
+        <header-file src="src/ios/FloProtocolsCommon.h" target-dir="src/ios"/>
+        <header-file src="src/ios/ABTError.h" target-dir="src/ios"/>
+        <header-file src="src/ios/FmAudioJackDevice.h" target-dir="src/ios"/>
+        <header-file src="src/ios/ACRAesTrackData.h" target-dir="src/ios"/>
+        <header-file src="src/ios/FmAudioJackSessionManager.h" target-dir="src/ios"/>
+        <header-file src="src/ios/FmBluetoothDevice.h" target-dir="src/ios"/>
+        <header-file src="src/ios/ACRCRC16.h" target-dir="src/ios"/>
+        <header-file src="src/ios/FmBluetoothSessionManager.h" target-dir="src/ios"/>
+        <header-file src="src/ios/ACRDukptReceiver.h" target-dir="src/ios"/>
+        <header-file src="src/ios/FmCustomTypes.h" target-dir="src/ios"/>
+        <header-file src="src/ios/ACRDukptTrackData.h" target-dir="src/ios"/>
+        <header-file src="src/ios/FmDevice.h" target-dir="src/ios"/>
+        <header-file src="src/ios/FmErrorManager.h" target-dir="src/ios"/>
+        <header-file src="src/ios/ACRResult.h" target-dir="src/ios"/>
+        <header-file src="src/ios/ACRStatus.h" target-dir="src/ios"/>
+        <header-file src="src/ios/FmNdefManager.h" target-dir="src/ios"/>
+        <header-file src="src/ios/ACRTrack1Data.h" target-dir="src/ios"/>
+        <header-file src="src/ios/FmSessionManager.h" target-dir="src/ios"/>
+        <header-file src="src/ios/ACRTrack2Data.h" target-dir="src/ios"/>
+        <header-file src="src/ios/FtBleReader.h" target-dir="src/ios"/>
+        <header-file src="src/ios/ACRTrackData.h" target-dir="src/ios"/>
+        <header-file src="src/ios/Logging.h" target-dir="src/ios"/>
+        <header-file src="src/ios/ACSBluetooth.h" target-dir="src/ios"/>
+        <header-file src="src/ios/NFCMessage.h" target-dir="src/ios"/>
+        <header-file src="src/ios/AcsAjReader.h" target-dir="src/ios"/>
+        <header-file src="src/ios/NSData+FJStringDisplay.h" target-dir="src/ios"/>
+        <header-file src="src/ios/AcsBtReader.h" target-dir="src/ios"/>
+        <header-file src="src/ios/NdefMessage.h" target-dir="src/ios"/>
+        <header-file src="src/ios/AudioJack.h" target-dir="src/ios"/>
+        <header-file src="src/ios/NdefRecord.h" target-dir="src/ios"/>
+        <header-file src="src/ios/AudioJackErrors.h" target-dir="src/ios"/>
+        <header-file src="src/ios/Reader.h" target-dir="src/ios"/>
+        <header-file src="src/ios/BleTags.h" target-dir="src/ios"/>
+        <header-file src="src/ios/ReaderInterface.h" target-dir="src/ios"/>
+        <header-file src="src/ios/DUKPT.h" target-dir="src/ios"/>
+        <header-file src="src/ios/ReaderManager.h" target-dir="src/ios"/>
+        <header-file src="src/ios/FJStringDisplay.h" target-dir="src/ios"/>
+        <header-file src="src/ios/Tag.h" target-dir="src/ios"/>
+        <header-file src="src/ios/FLOReader.h" target-dir="src/ios"/>
+        <header-file src="src/ios/Utilities.h" target-dir="src/ios"/>
+        <header-file src="src/ios/FLOTag.h" target-dir="src/ios"/>
+        <header-file src="src/ios/ft301u.h" target-dir="src/ios"/>
+        <header-file src="src/ios/FTType.h" target-dir="src/ios"/>
+        <header-file src="src/ios/utils.h" target-dir="src/ios"/>
+        <header-file src="src/ios/Utilities.h" target-dir="src/ios"/>
+        <header-file src="src/ios/FLOTag.h" target-dir="src/ios"/>
+        <header-file src="src/ios/ft301u.h" target-dir="src/ios"/>
+        <header-file src="src/ios/FTType.h" target-dir="src/ios"/>
+        <header-file src="src/ios/FTaR530.h" target-dir="src/ios"/>
+        <header-file src="src/ios/winscard.h" target-dir="src/ios"/>
+        <header-file src="src/ios/FeitianAjReader.h" target-dir="src/ios"/>
+        <header-file src="src/ios/wintypes.h" target-dir="src/ios"/>
     
         <js-module src="www/FlomioPlugin.js" name="FlomioPlugin">
             <clobbers target="flomioPlugin" />
         </js-module>
-        <header-file src="src/ios/FlomioPlugin.h" />
+        <header-file src="src/ios/src/ios/FlomioPlugin.h" />
 		<source-file src="src/ios/FlomioPlugin.m" />
     </platform>
 </plugin>
