Added linker flag and missing header

--- a/plugin.xml
+++ b/plugin.xml
@@ -31,6 +31,7 @@
         <source-file src="src/ios/libSDKClasses.a" framework="true" />
         
         <!-- Flomio SDK header files -->
+        <header-file src="src/ios/FJStringDisplay.h" target-dir="src/ios"/>
         <header-file src="src/ios/ABTAcr1255uj1Reader.h" target-dir="src/ios"/>
         <header-file src="src/ios/AcsAjReader.h" target-dir="src/ios"/>
         <header-file src="src/ios/FmDevice.h" target-dir="src/ios"/>
@@ -77,6 +78,7 @@
         
         <!-- System Frameworks -->
         <framework src="MediaPlayer.framework" weak="true" />
+        <framework src="libc++.dylib" />
         
         <js-module src="www/FlomioPlugin.js" name="FlomioPlugin">
             <clobbers target="flomioPlugin" />
