--- a/plugin.xml
+++ b/plugin.xml
@@ -6,6 +6,10 @@
     <name>flomio_cordova_plugin</name>
     <description>Flomio SDK integration enables NFC, BLE, and UHF RFID reader hardware.</description>
     
+    <js-module src="www/FlomioPlugin.js" name="FlomioPlugin">
+        <clobbers target="flomioPlugin" />
+    </js-module>
+
     <!-- android -->
     <platform name="android">
         <config-file target="res/xml/config.xml" parent="/*">
@@ -13,9 +17,6 @@
             <param name="android-package" value="com.flomio.plugin.FlomioPlugin"/>
           </feature>
         </config-file>
-        <js-module src="www/FlomioPlugin.js" name="FlomioPlugin">
-            <clobbers target="floPlugin" />
-        </js-module>
         <source-file src="src/android/FlomioPlugin.java" target-dir="src/com/flomio/plugin/"/>
     </platform>
 
@@ -26,9 +27,6 @@
                 <param name="ios-package" value="FlomioPlugin" />
             </feature>
         </config-file>
-        <js-module src="www/FlomioPlugin.js" name="FlomioPlugin">
-            <clobbers target="floPlugin" />
-        </js-module>
 
         <!-- Flomio SDK library -->
         <source-file src="src/ios/libSDKClasses.a" framework="true" />
@@ -83,9 +81,13 @@
         <framework src="MediaPlayer.framework" weak="true" />
         <framework src="libc++.dylib" />
         
-        <js-module src="www/FlomioPlugin.js" name="FlomioPlugin">
-            <clobbers target="flomioPlugin" />
-        </js-module>
+        <!-- Request permission to use mircophone -->
+        <preference name="MICROPHONE_USAGE_DESCRIPTION" default=" " />
+        <config-file target="*-Info.plist" parent="NSMicrophoneUsageDescription">
+            <string>$MICROPHONE_USAGE_DESCRIPTION</string>
+        </config-file>
+
+        
         <header-file src="src/ios/FlomioPlugin.h" />
 		<source-file src="src/ios/FlomioPlugin.m" />
     </platform>
