--- a/package.json
+++ b/package.json
@@ -21,5 +21,18 @@
   "bugs": {
     "url": "https://github.com/flomio/flomio_cordova_plugin/issues"
   },
-  "homepage": "https://github.com/flomio/flomio_cordova_plugin#readme"
+  "homepage": "https://github.com/flomio/flomio_cordova_plugin#readme",
+  "dependencies": {
+    "ndef": "^0.1.3"
+  },
+  "devDependencies": {
+    "@types/node": "^7.0.12",
+    "shebang-loader": "0.0.1",
+    "ts-loader": "^2.2.0",
+    "ts-node": "^3.1.0",
+    "tslint": "^5.4.3",
+    "tslint-config-standard": "^6.0.1",
+    "typescript": "^2.4.1",
+    "webpack": "^2.3.3"
+  }
 }
