--- a/package.json
+++ b/package.json
@@ -1,38 +1,44 @@
 {
-  "name": "flomio_cordova_plugin",
-  "version": "1.0.5",
-  "description": "Flomio SDK integration enables NFC, BLE, and UHF RFID reader hardware.",
-  "main": "www/FlomioPlugin.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/flomio/flomio_cordova_plugin.git"
-  },
-  "keywords": [
-    "NFC",
-    "BLE",
-    "UHF RFID",
-    "Proximity ID"
-  ],
-  "author": "Richard Grundy",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/flomio/flomio_cordova_plugin/issues"
-  },
-  "homepage": "https://github.com/flomio/flomio_cordova_plugin#readme",
-  "dependencies": {
-    "ndef": "^0.1.3"
-  },
-  "devDependencies": {
-    "@types/node": "^7.0.12",
-    "shebang-loader": "0.0.1",
-    "ts-loader": "^2.2.0",
-    "ts-node": "^3.1.0",
-    "tslint": "^5.4.3",
-    "tslint-config-standard": "^6.0.1",
-    "typescript": "^2.4.1",
-    "webpack": "^2.3.3"
-  }
+    "name": "flomio_cordova_plugin",
+    "version": "1.0.5",
+    "description": "Flomio SDK integration enables NFC, BLE, and UHF RFID reader hardware.",
+    "main": "www/FlomioPlugin.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/flomio/flomio_cordova_plugin.git"
+    },
+
+    "keywords": [
+        "NFC",
+        "BLE",
+        "UHF RFID",
+        "Proximity ID",
+        "ecosystem:cordova",
+        "cordova-ios"
+    ],
+    "author": "Richard Grundy",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/flomio/flomio_cordova_plugin/issues"
+    },
+    "homepage": "https://github.com/flomio/flomio_cordova_plugin#readme",
+    "dependencies": {
+        "ndef": "^0.1.3"
+    },
+    "devDependencies": {
+        "@types/node": "^7.0.12",
+        "shebang-loader": "0.0.1",
+        "ts-loader": "^2.2.0",
+        "ts-node": "^3.1.0",
+        "tslint": "^5.4.3",
+        "tslint-config-standard": "^6.0.1",
+        "typescript": "^2.4.1",
+        "webpack": "^2.3.3",
+        "gulp": "^3.9.1",
+        "gulp-uglify": "^1.5.1",
+        "gulp-concat": "^2.6.0"
+    }
 }
