--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
         "type": "git",
         "url": "git+https://github.com/flomio/flomio_cordova_plugin.git"
     },
-
     "keywords": [
         "NFC",
         "BLE",
@@ -26,7 +25,8 @@
     },
     "homepage": "https://github.com/flomio/flomio_cordova_plugin#readme",
     "dependencies": {
-        "ndef": "^0.1.3"
+        "ndef": "^0.1.3",
+        "ndef-lib": "file:../ndef-lib"
     },
     "devDependencies": {
         "@types/node": "^7.0.12",
