--- a/package.json
+++ b/package.json
@@ -30,15 +30,15 @@
     },
     "devDependencies": {
         "@types/node": "^7.0.12",
-        "shebang-loader": "0.0.1",
-        "ts-loader": "^2.2.0",
-        "ts-node": "^3.1.0",
-        "tslint": "^5.4.3",
-        "tslint-config-standard": "^6.0.1",
-        "typescript": "^2.4.1",
-        "webpack": "^2.3.3",
         "gulp": "^3.9.1",
+        "gulp-concat": "^2.6.0",
         "gulp-uglify": "^1.5.1",
-        "gulp-concat": "^2.6.0"
+        "shebang-loader": "0.0.1",
+        "ts-loader": "^2.3.7",
+        "ts-node": "^3.3.0",
+        "tslint": "^5.8.0",
+        "tslint-config-standard": "^6.0.1",
+        "typescript": "^2.6.2",
+        "webpack": "^3.10.0"
     }
 }
