--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     },
     "homepage": "https://github.com/flomio/flomio_cordova_plugin#readme",
     "dependencies": {
-        "ndef": "^0.1.3",
-        "ndef-lib": "git+https://github.com/flomio/ndef-lib.git"
+        "ndef": "^0.1.3"
     },
     "devDependencies": {
         "@types/node": "^7.0.12",
